--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="x402.Cards - DeFi Data Streaming Platform" />
     <meta property="og:description" content="Flip-card Data Agents with pay-per-second streaming on IOTA EVM" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@x402Cards" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/og-image.png" />
     
     <!-- Premium Web3 Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
