feat: add favicon and enhance UI components; improve card interactions and layout

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>x402.Cards - Stream Real-Time Market Intelligence</title>
     <meta name="description" content="Activate autonomous data cards and pay only for the seconds you stream on IOTA EVM" />
     <meta name="author" content="x402.Cards" />
