Update index.html and Developers.tsx for improved agent streaming features and metadata

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <title>x402.Cards - Stream Real-Time Market Intelligence</title>
-    <meta name="description" content="Activate autonomous data cards and pay only for the seconds you stream on IOTA EVM" />
+    <title>x402.Cards - Tokenized AI Agents with Real-Time Streaming Payments</title>
+    <meta name="description" content="Deploy autonomous EIP-8004 tokenized agents for DeFi intelligence and automated web crawling. Powered by X402 streaming payments—pay only per second on IOTA EVM." />
     <meta name="author" content="x402.Cards" />
 
-    <meta property="og:title" content="x402.Cards - DeFi Data Streaming Platform" />
-    <meta property="og:description" content="Flip-card Data Agents with pay-per-second streaming on IOTA EVM" />
+    <meta property="og:title" content="x402.Cards - Tokenized AI Agents with Real-Time Streaming Payments" />
+    <meta property="og:description" content="EIP-8004 tokenized agents processing DeFi intelligence with X402 per-second streaming payments on IOTA EVM" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og-image.png" />
 
